# TraceFinder

./: .gitattributes  .gitignore  01_exploration.ipynb  AI_TraceFinder (2).txt  Allfiles.ipynb  CNN_Model_kaggle.ipynb  CNN_model_training.ipynb  Camera Roll.code-workspace  Denoising_part.ipynb  HYBRID_CNN.ipynb  Hybrid_CNN_model_kaggle.ipynb  ModelTrain.ipynb  ModelTraining.ipynb  Models  README.md  Residual images(data).csv  SVM & Random Forest.ipynb  Scanner (2).ipynb  Scikit.ipynb  TraceFinder.ipynb  Untitled-1.ipynb  X_feat.npy  analyze_images.py  app (1).py  app.py  cnn model.ipynb1.ipynb  collect_samples.py  complete project.ipynb  dataset.py  denoising.ipynb  feature_extraction_dataframe.ipynb  first.ipynb images.ipynb  full_metadata.csv  generate_sample_data.py  hybrid_cnn.ipynb  hybrid_feat_scaler.pkl  hybrid_label_encoder.pkl  hybrid_training_history.pkl  image_features.csv  image_metadata.csv  (+26 more)
.agent/workflows/: run_app.md
Backend/: auth.py  database.py  main.py  models.py  requirements.txt  schemas.py
Frontend/: index.html  package-lock.json  package.json
Frontend/src/: App.jsx  index.css
Frontend/src/components/: Footer.jsx  ImageUpload.jsx  ModelDetails.jsx  Navbar.jsx  PredictionResult.jsx
Frontend/src/pages/: AuthPages.jsx  Dashboard.jsx  (+3 more)
backend/: main.py  models.py  preprocessing.py
project/: INSTRUCTIONS.md
project/frontend/: app.py
scripts/: create_tables.py  setup_mysql_db.py
src/: config.py  utils.py
v1/: TraceFinderV1.ipynb  tracefinderV1.py
v2/: TraceFinderV2.ipynb  tracefinderV2.py
v3/: TraceFinderV3.ipynb  tracefinderV3.py
(+1 files in other folders)
