[tool.poetry]
name = "scanned-docs-preprocessing"
version = "0.1.0"
description = "A project for preprocessing scanned document samples from various scanner devices."
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21.0"
opencv-python = "^4.5.3"
Pillow = "^8.2.0"
pandas = "^1.3.0"
scikit-image = "^0.18.3"
scikit-learn = "^0.24.2"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"